welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:11: error: '=' expected but ';' found.
		    faireV();
^