welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
override def run() {

def faireV() { avance();baisseBrosse();leveBrosse();avance();
			left();avance();baisseBrosse();leveBrosse();recule();
			right();avance();baisseBrosse();leveBrosse();avance();left();
			}
						
def faireW() {faireV(); 
			var 
		    setCouleurBrosse(c:red)
		    faireV();
		    setCouleurBrosse(c:blue)
		    faireV();
		    setCouleurBrosse(c:green)
		    faireV();}
			
def faireX() { for(d<-1 to 3) {faireW();}
			for(e<-1 to 15) {recule();}
			left();for(f<-1 to 5) {avance();}; right();}

for(g<-1 to 3) {faireX();}

}
